--- a/style.css
+++ b/style.css
@@ -25,26 +25,30 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    height: 90px;
     width: 80%;
     margin: 0 auto;
     
     
 }
 header p {
-    font-size: 20px;
+    font-size: 15px;
 }
 header h5 {
-    font-size: 25px;
+    font-size: 20px;
 }
 header img{
-    width: 60%;
+    width: 50%;
 }
 
 article {
     border-top: 3px solid rgb(0, 95, 53);
-    height: 400px;
+    height: 500px;
     width: 100%;
     background: url("https://images.unsplash.com/photo-1421218108559-eb1ff78357f5?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTV8fHJvYWR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60") center/cover;
+}
+.formulaire {
+    width: 300px;
+
 }
 
