--- a/style.css
+++ b/style.css
@@ -41,14 +41,15 @@ header img{
     width: 50%;
 }
 
-article {
+section {
     border-top: 3px solid rgb(0, 95, 53);
     height: 500px;
     width: 100%;
     background: url("https://images.unsplash.com/photo-1421218108559-eb1ff78357f5?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTV8fHJvYWR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60") center/cover;
 }
-.formulaire {
-    width: 300px;
 
+form { 
+width: 300px;
+background-color: white;
 }
 
