--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 }
 a {
     text-decoration: none;
+    color: inherit;  
 }
 ul {
     list-style: none;
@@ -15,7 +16,6 @@ ul {
     justify-content: space-between;
     align-items: center;
 }
-
 
 .container {
     margin: 0 auto;
@@ -27,9 +27,11 @@ header {
     align-items: center;
     height: 90px;
     width: 80%;
-    margin: 0 auto;
+    margin: 0 auto;    
     
-    
+}
+i {
+    color: white;
 }
 header p {
     font-size: 15px;
@@ -40,16 +42,46 @@ header h5 {
 header img{
     width: 50%;
 }
-
+header a {
+    font-size: 20px;
+}
+.titre {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.titreDroit {
+    background-color: orangered;
+    padding: 5px;
+    color: white;
+}
 section {
     border-top: 3px solid rgb(0, 95, 53);
-    height: 500px;
+    height: 700px;
     width: 100%;
+    
     background: url("https://images.unsplash.com/photo-1421218108559-eb1ff78357f5?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTV8fHJvYWR8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=60") center/cover;
+}
+.titre {
+   
+    margin-right: 0mm;
+    text-align: center;
+}
+h1 {
+    font-size: 30px;
+}
+h2 {
+    font-size: 20px ;
 }
 
 form { 
-width: 300px;
+width: 500px;
 background-color: white;
+margin: 50px;
+padding :10px;
+margin-left: 100px;
+}
+button {
+    width: 100%;
 }
 
